--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.0
         env:
-          GITHUB_TOKEN: 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
-          USERNAME: Vedeesh6
+          GITHUB_TOKEN: ${{ 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 }}
+          USERNAME: ${{ Vedeesh6 }}
       - name: Commit & Push
         run: |
           git config user.name github-actions
