--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,8 @@
 name: Run and show Java code
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '*/1 * * * *'
 
 jobs:
   build:
