--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: openjdk
 
       - name: Run Java code in README.md file
         run: |
